[gd_scene load_steps=4 format=2]

[ext_resource path="res://hud/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/WarningSign.png" type="Texture" id=2]
[ext_resource path="res://assets/AsteroidsText.png" type="Texture" id=3]

[node name="Hud" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="AsteroidWarningContainer" type="Control" parent="."]
anchor_top = 0.169
anchor_right = 0.162
anchor_bottom = 0.242
margin_left = 0.432373
margin_top = -0.0775299
margin_right = -0.455627
margin_bottom = 0.122467
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AsteroidsWarningSign" type="TextureRect" parent="AsteroidWarningContainer"]
margin_left = 4.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 38.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AsteroidsText" type="TextureRect" parent="AsteroidWarningContainer"]
margin_left = 48.0267
margin_top = 2.18921
margin_right = 158.027
margin_bottom = 40.1892
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedContainer" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePanel" type="Panel" parent="PausedContainer"]
margin_right = 350.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PausedContainer/PausePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PausedContainer/PausePanel/MarginContainer"]
margin_top = 58.0
margin_right = 310.0
margin_bottom = 72.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="PausedContainer"]
margin_top = -0.707108
margin_right = 46.0
margin_bottom = 13.2929
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}
